[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fontninja"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
version = "0.0.1"
description = "A toy font compiler"
packages = [
    { include = "fontninja", from = "Lib" },
]

[tool.poetry.scripts]
fontninja = 'fontninja.__main__:main'

[tool.poetry.dependencies]
python = ">=3.7"
fonttools = "^4.34.4"
cu2qu = "1.6.7.post1"
ninja = "^1.10.2.3"
ufoLib2 = "^0.13.1"
ufo2ft = "^2.28.0"
fontmake = ">=3.3.0"
